# CS316-2022

./: .gitignore  CS316-Y2022.cabal  README.md  hie.yaml
lecture-notes/: Intro.hs  Week01.hs  Week01Intro.hs  Week01Intro02.hs  Week01Problems.hs  Week01Solutions.hs  Week02.hs  Week02Intro.hs  Week02Problems.hs  Week02Solutions.hs  Week03.hs  Week03Intro01.hs  Week03Problems.hs  Week03Solutions.hs  Week04.hs  Week04Intro.hs  Week04Problems.hs  Week04Solutions.hs  Week05.hs  Week05Intro.hs  Week05Problems.hs  Week05Solutions.hs  Week06.hs  Week06Intro.hs  Week06Problems.hs  Week06Solutions.hs  Week07.hs  Week07Intro.hs  Week07Problems.hs  Week07Solutions.hs  Week08.hs  Week08Intro.hs  Week08Problems.hs  Week08Solutions.hs  Week09.hs  Week09Intro.hs  Week10.hs
